--- a/src/1-Gallery.html
+++ b/src/1-Gallery.html
@@ -7,11 +7,8 @@
     <title>Page 2</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
-    </section>
-    <ul></ul>
+    <a href="./index.html">Home</a>
+    <ul class="gallery"></ul>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
