--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul>
-      <li><a href="./1-Gallery.html">Gallery</a></li>
-      <li><a href="./2-Form.html">Form</a></li>
+      <li><a href="./1-gallery.html">Gallery</a></li>
+      <li><a href="./2-form.html">Form</a></li>
     </ul>
   </body>
 </html>
