--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework</title>
+    <title>Homework №9</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="../src/1-gallery.html">Gallery</a></li>
-      <li><a href="../src/2-form.html">Form</a></li>
-    </ul>
+    <a href="./src/1-gallery.html">Gallery</a>
+    <a href="./src/2-form.html">Form</a>
   </body>
 </html>
